# AICOO

./: .env.example  .gitignore  CLAUDE.md  README.md  hello.txt  ozon-bi.service  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20260109_1431_72bd0b60a206_initial_schema.py  20260110_1025_8e40caa0d488_add_content_experiments_table.py
src/: config.py  main.py
src/ai/: assistant.py  card_evaluator.py  prompts.py  tools.py
src/analytics/: inventory.py  pricing.py  sales.py
src/bot/: app.py  keyboards.py
src/bot/handlers/: callbacks.py  commands.py  messages.py
src/database/: engine.py  models.py
src/database/repositories/: ad_experiments.py  content_experiments.py  experiments.py  inventory.py  price_recommendations.py  products.py  sales.py
src/ozon/: client.py  models.py  performance.py  sync.py
src/scheduler/: jobs.py
src/utils/: dates.py  formatting.py
